# digibyte-api-cpp

./: .travis.yml  CMakeLists.txt  README.md
src/digibyteapi/: CMakeLists.txt  digibyteapi.cpp  digibyteapi.h  exception.h  types.h
src/test/: CMakeLists.txt  main.cpp
